matrix overlapping chain info fix

--- a/css/matrix.css
+++ b/css/matrix.css
@@ -45,3 +45,7 @@
     overflow: hidden;
     position: absolute;
 }
+
+.matrixView .chainArea {
+	
+}
